--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "@ibsheet/loader": "^1.0.3",
+    "@ibsheet/loader": "latest",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
     "zone.js": "^0.8.26"
