--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-# ignore ibsheet folder
-public/ibsheet
-
-# local env files
-.env.local
-.env.*.local
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
 /dist
